# wasm-examples

01-exports-lib/: README.md  build_debug.sh  build_release.sh  index.html  index.js  wasm_lib_debug.wat  wasm_lib_release.wat
01-exports-lib/pkg/: wasm_lib.wasm
01-exports-lib/rust/: Cargo.toml
01-exports-lib/rust/src/: lib.rs
02-exports-bindgen/: README.md  build_debug.sh  build_release.sh  index.js  wasm_lib_debug.wat  wasm_lib_release.wat
02-exports-bindgen/pkg/: comments.diff  wasm_lib.js  wasm_lib_bg.wasm
02-exports-bindgen/rust/: Cargo.toml
02-exports-bindgen/rust/src/: lib.rs
04-exceptions/: build_debug.sh  build_release.sh  index.html  index.js  wasm_lib_debug.wat  wasm_lib_release.wat
04-exceptions/pkg/: wasm_lib.js  wasm_lib_bg.wasm
04-exceptions/rust/: Cargo.toml
04-exceptions/rust/src/: lib.rs
