[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["Nikola Stoyanov <ns.barzakov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "*"
serde_derive = "*"
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
